# SortingAlgorithms

./: CMakeLists.txt  Main.cpp  README.md  Random.h  SelectionAlgorithm.cpp  SelectionAlgorithm.h  Sorting Algorithm.sln  Sorting Algorithm.vcxproj  Sorting Algorithm.vcxproj.filters
Debug/: Sorting Algorithm.ilk  vc142.idb
Debug/Sorting .71576C81.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sorting Algorithm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
